add array object and contains function object and realize different css attr modify

--- a/ch06/styles/my_style.css
+++ b/ch06/styles/my_style.css
@@ -1,11 +1,24 @@
 #controls{
 	clear:both;
 }
+
 #my_hand{
 	clear:both;
 	border: 1px solid gray;
 	height: 250px;
 	width: 835px;
+}
+
+.win{
+	color:green;
+}
+.lose{
+	color:red;
+}
+
+#btnHit, #btnStick, #btnRestart{
+	display: none;
+	float: left;
 }
 
 h3 {
@@ -14,4 +27,20 @@ h3 {
 }
 .current_hand{
 	float:left;
+}
+
+
+#result{
+	display:none;
+	position:absolute;
+	top: 100px;
+	left: 20px;
+}
+#result > img {
+	width: 500px;
+	height: 250px;
+}
+
+#hdrTotal{
+	font-size: 15px;
 }
