--- a/ch07/styles/my_style.css
+++ b/ch07/styles/my_style.css
@@ -8,6 +8,14 @@ p{
     font-size: 12px;
 }
 
+
+#top {
+    position:absolute;
+    left:191px;
+    top:15px;
+    z-index: 4;
+}
+
 #frame{
     position: absolute;
     left: 100px;
@@ -15,7 +23,7 @@ p{
     width: 545px;
     height: 629px;
     background-image:url(../images/frame.png);
-    z-index: 2;
+    z-index: 3;
     overflow: hidden; 
 }
 
@@ -25,7 +33,7 @@ p{
     top: 84px;
     width: 367px;
     height: 460px;
-    z-index: 1;
+    z-index: 2;
     overflow: hidden;
 }
 
@@ -33,7 +41,7 @@ p{
     position: relative;
     left: 0px;
     top: 0px;
-    z-index: 0;
+    z-index: 1;
 }
 
 #head{
